Corrected conv_layer function.

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -5732,6 +5732,245 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 592,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.array([1, 2, -2, 3, -1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 593,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2, -2,  3, -1])"
+      ]
+     },
+     "execution_count": 593,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 595,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 595,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(np.exp(X)/np.sum(np.exp(X)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 596,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 596,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 597,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = ()\n",
+    "for i in range(10):\n",
+    "    m = m + (i, )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 598,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1, 2, 3, 4, 5, 6, 7, 8, 9)"
+      ]
+     },
+     "execution_count": 598,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 599,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 599,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 600,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 600,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 601,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 601,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 604,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conv_layer(X, filter_arr, step_size=1):\n",
+    "  # Change so that it can take in larger sizes. I want to make it so that this\n",
+    "  # detects the number of color channels that the picture has.\n",
+    "  conv_array = np.empty_like(X)\n",
+    "  padded = pad(X, step_size)\n",
+    "  m = filter_arr.shape\n",
+    "  for i in range(X.shape[-2]):\n",
+    "    for j in range(X.shape[-1]):\n",
+    "      conv_array[...,i, j] = np.tensordot(padded[...,\n",
+    "                                                i:m[-2]+i,\n",
+    "                                                j:m[-1]+j],\n",
+    "                                                filter_arr)\n",
+    "  return conv_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 605,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = x_train[0:16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 610,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.random.randn(2, 3, 4, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 611,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 4, 5)"
+      ]
+     },
+     "execution_count": 611,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 613,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 4, 5)"
+      ]
+     },
+     "execution_count": 613,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conv_layer(X, F).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
